[project]
name = "batch-geoip"
version = "0.1.1"
description = "Batch GeoIP Lookup."
authors = [{ name = "Mitch Haddadi", email = "12067255+dfirsec@users.noreply.github.com" }]
requires-python = ">=3.12.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6,",
    "lxml>=5.4.0,",
    "requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
